tests/baselines/reference/ES5SymbolProperty6.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(2,6): error TS2304: Cannot find name 'Symbol'.
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(5,9): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/Symbols/ES5SymbolProperty6.ts (2 errors) ====
    class C {
        [Symbol.iterator]() { }
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.